<resources>
    <string name="app_name">爱校</string>
    <string name="str_search_college_hint">搜索学校名称</string>
    <string name="permisson_quanxian_ok">确定</string>
    <string name="permisson_quanxian_call">该功能需要赋予访问电话的权限，否则该功能可能不能正常工作！</string>
    <string name="permisson_quanxian_storage">该功能需要赋予访问存储的权限，否则该功能可能不能正常工作！</string>
    <string name="permisson_quanxian_connact">该功能需要赋予访问并修改联系人的权限，否则该功能可能不能正常工作！</string>
    <string name="title_complete">完成</string>
    <string name="tab_data">数据</string>
    <string name="tab_business">业务</string>
    <string name="tab_me">我的</string>
    <string name="submit">提交</string>
    <string name="old_pwd_hnit">请输入旧密码</string>
    <string name="new_pwd_hnit">新密码须为6位及以上,字母加数字组合</string>
    <string name="new_pwd_hnit_again">请再次输入新密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_smscode">请输入验证码</string>
    <string name="eidt_pwd_title_getcode">找回密码</string>
    <string name="eidt_pwd_title_newpwd">设置新密码</string>
    <string name="edit_pwd">修改密码</string>
    <string name="morning_read_qrcode_title">晨读二维码</string>
    <string name="picker_title">%1$s年%2$s月%3$s日</string>
    <string name="open_claz_time_picker_go">上课时间</string>
    <string name="open_claz_time_picker_off">下课时间</string>
    <string name="open_claz_time_picker_start">开始时间</string>
    <string name="open_claz_time_picker_over">截止时间</string>
    <string name="open_claz_time_over_year_less_than_start_year">不允许结束年份早于开始年份</string>
    <string name="open_claz_time_over_month_less_than_start_month">不允许结束时间早于开始时间</string>
    <string name="open_class_title">公开课管理</string>
    <string name="open_class_title_complete">完成</string>
    <string name="open_class_week">本周公开课详情</string>
    <string name="open_class_history">历史课程详情</string>
    <string name="open_class_time_too_short">一节课的时间太短了</string>
    <string name="open_class_date_is_early">上课日期不等小于当前日期</string>
    <string name="open_claz_time_valitate_time_too_short">有效时间太短了</string>
    <string name="login_crm">登录集体管理系统</string>
    <string name="username_label">帐号</string>
    <string name="fm_me_switch_campus">校区切换</string>
    <string name="fm_me_switch_role">角色切换</string>
    <string name="fm_me_summary_weekly">我的周报</string>
    <string name="fm_me_notify_msg">消息通知</string>
    <string name="fm_me_mornig_qrcode">晨读二维码</string>
    <string name="fm_me_change_pwd">修改密码</string>
    <string name="fm_me_kefu">客服</string>
    <string name="fm_me_version">当前版本号</string>
    <string name="fm_me_login_out">退出登录</string>
    <string name="per_info_title">个人资料</string>
    <string name="per_info_avart">头像</string>
    <string name="per_info_xingming">姓名</string>
    <string name="per_info_birthday">生日</string>
    <string name="per_info_QQ">QQ</string>
    <string name="per_info_input_QQ">请输入QQ</string>
    <string name="per_net_token_failed">头像保存失败</string>
    <string name="per_net_info_failed">资料保存失败</string>
    <string name="per_net_token_sucess">头像保存成功</string>
    <string name="per_net_info_suces">资料保存成功</string>
    <string name="per_info_phone">手机号</string>
    <string name="passwd_label">密码</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="username_hint">请输入手机号</string>
    <string name="forget_passwd">忘记密码?</string>
    <string name="login">登录</string>
    <string name="send_sms_sucess">验证码发送成功</string>
    <string name="send_sms_faild">验证码发送失败</string>
    <string name="check_sms_faild">验证码错误</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="pwd_reset_sucess">密码重置成功</string>
    <string name="pwd_reset_faild">密码重置失败,密码必须是数字,字母的组合</string>
    <string name="capture">拍照</string>
    <string name="amblue">相册</string>
    <string name="cancel">取消</string>
    <string name="permission_storage_denid">存储权限被禁止,部分功能可能无法正常工作.</string>
    <string name="permission_camera_denid">相机权限被禁止,部分功能可能无法正常工作.</string>
    <string name="choose_birthday">选择日期</string>
    <string name="twice_pwd_not_equal">两次密码不相同</string>
    <string name="time_left_to_try_again">%1$s s后重试</string>
    <string name="switch_role">角色切换</string>
    <string name="switch_campus">校区切换</string>
    <string name="kefu_title">客服</string>
    <string name="choose_date">选择日期</string>
    <string name="student_statistics">学员统计</string>
    <string name="call">拨打电话</string>
    <string name="phone_contacts">保存到通讯录</string>
    <string name="item_pay_state">报名情况</string>
    <string name="item_register_time">登记时间</string>
    <string name="item_matriculation_time">上课时间</string>
    <string name="item_enter_time">报名时间</string>
    <string name="item_start_time">开始时间</string>
    <string name="item_end_time">结束时间</string>
    <string name="time_error">结束时间不能早于起始时间</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="pick_referrer">选择推荐人</string>
    <string name="add_student">添加学员</string>
    <string name="item_name">姓名</string>
    <string name="item_phone">联系电话</string>
    <string name="item_qq">QQ</string>
    <string name="item_wexin">微信</string>
    <string name="item_university">就读学校</string>
    <string name="item_major">专业</string>
    <string name="span_business_info">业务信息</string>
    <string name="item_campus">所属校区</string>
    <string name="item_from">来源</string>
    <string name="item_referrer">角色</string>
    <string name="item_remark">备注</string>
    <string name="communication_list_title">沟通记录</string>
    <string name="common_submit">提交</string>
    <string name="add_communication">添加沟通记录</string>
    <string name="commun_label_student_name">学员</string>
    <string name="commun_choose_hint">请选择(必选)</string>
    <string name="commun_label_state">状态</string>
    <string name="commun_label_faith">学习渴望度</string>
    <string name="commun_label_oppose">目前困惑点</string>
    <string name="commun_label_source">学费来源</string>
    <string name="commun_input_source_hint">请输入学员学费来源</string>
    <string name="commun_label_back_date">回访时间</string>
    <string name="commun_detail">沟通详情</string>
    <string name="commun_label_date">沟通时间</string>
    <string name="commun_choose1_hint">请选择</string>
    <string name="commun_label_content">沟通内容</string>
    <string name="commun_input_content_hint">请输入沟通内容（必填）</string>
    <string name="pick_student">选择学员</string>
    <string name="hint_search">搜索</string>
    <string name="commun_date">沟通时间</string>
    <string name="commun_date_start">开始时间</string>
    <string name="commun_date_end">结束时间</string>
    <string name="commun_refuse">目前困惑点</string>
    <string name="commun_confidence">学习渴望度</string>
    <string name="commun_order">办理人</string>
    <string name="commun_state_hnit">学员学习状态</string>
    <string name="commun_confidence_hnit">学员学习渴望度</string>
    <string name="commun_refuse_hnit">报名目前困惑点</string>
    <string name="commun_order_hnit">报名办理人</string>
    <string name="commun_rest">重置</string>
    <string name="commun_ok">确定</string>
    <string name="comm_dialog_stu_state_title">学员状态</string>
    <string name="check_student">请选择学生</string>
    <string name="check_tuition_source">请填写学费来源</string>
    <string name="check_status">请选择状态</string>
    <string name="check_belief">请选择学习渴望度</string>
    <string name="check_refuse">请选择目前困惑点</string>
    <string name="check_communication_date">请选择沟通时间</string>
    <string name="check_content">请填写沟通内容</string>
    <string name="apply_status">报名状态</string>
    <string name="label_student_info_english_name">英文名</string>
    <string name="hint_uninput">未添加</string>
    <string name="label_student_phone">联系电话</string>
    <string name="label_student_qq">QQ</string>
    <string name="label_student_birthday">生日</string>
    <string name="label_student_school">就读学校</string>
    <string name="label_student_specialty">专业</string>
    <string name="label_student_class">班级</string>
    <string name="label_student_idcard">身份证</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_detail">学员详情</string>
    <string name="commun_list">沟通记录</string>
    <string name="apply_class_hour">已上课时/总课时</string>
    <string name="apply_tuition">已收学费</string>
    <string name="commun_add">添加沟通记录</string>
    <string name="communication_empty">暂时没有沟通记录</string>
    <string name="add_success">添加成功</string>
    <string name="str_complete">完成</string>
    <string name="str_campus">校区</string>
    <string name="label_student_wechat">微信</string>
    <string name="sure">确认</string>
    <string name="choose_commun_date">请选择沟通时间</string>
    <string name="save_pic">保存图片</string>
    <string name="save_pic_complete">已保存到相册</string>
    <string name="save_pic_faild">保存失败,可能没有文件存储权限.</string>
    <string name="add_communication_check_failed">请把必选和必填信息写完整!</string>
    <string name="hint_search_phone_username">根据姓名或手机号搜索..</string>
    <string name="pick_user">选择用户</string>
    <string name="pick_banliren">选择办理人</string>
    <string name="check_commun_add">请输入必选内容</string>
    <string name="label_student_info_user_name">用户名</string>
    <string name="msg_idcard_input">请输入18位的身份证号</string>
    <string name="search_user">搜索姓名、手机号</string>
    <string name="no_permission">当前角色,无权进行此操作.</string>
    <string name="no_value_show">当前没有可以展示的数据.</string>
    <string name="login_in_other_devices">请重新登录,当前账号可能在其他设备上登录或者登录身份已过期</string>
    <string name="ready_finish_activity">返回后本次输入信息会清空，确定返回？</string>
    <string name="ready_finish_activity_ok">确定</string>
    <string name="ready_finish_activity_cancel">取消</string>
    <string name="input_user_and_passwd">请输入用户名和密码</string>
    <string name="switch_role_failed">角色切换失败.可能是服务器问题。</string>
    <string name="no_date">暂无数据</string>
    <string name="sale_process">销售流程分析</string>
    <string name="sale_process_statement">业绩明细表</string>
    <string name="sale_process_zhuanjieshao">转介绍表</string>
    <string name="full_amount">总全款人数</string>
    <string name="apply_count">总报名人数</string>
    <string name="apply_count_rate">报名率</string>
    <string name="full_amount_rate">全款率</string>
    <string name="campus_performance">校区业绩对比</string>
    <string name="performance">业绩</string>
    <string name="base_performance">红线目标</string>
    <string name="challenge_performance">冲刺目标</string>
    <string name="attend_amount">总现场</string>
    <string name="registration_amount">总报名</string>
    <string name="full_payment_amount">总全款</string>
    <string name="registration_rate">总报名率</string>
    <string name="full_payment_rate">总全款率</string>
    <string name="full_payment_registration_rate">总全款报名率</string>
    <string name="campus_performance_target">各校区业绩目标</string>
    <string name="campus_performance_amount">各校区数据人数</string>
    <string name="data_market">市场业务</string>
    <string name="data_teach">教务教学</string>
    <string name="data_market_title">销售流程分析</string>
    <string name="data_market_subtitle">通过图表分析每个业务环节数据</string>
    <string name="data_campus_title">各校区业绩对比</string>
    <string name="data_campus_subtitle">了解各个校区间的业绩情况</string>
    <string name="data_other_title">其他统计</string>
    <string name="data_other_subtitle">多维度分析校区运营情况</string>
    <string name="data_campus">教务教学</string>
    <string name="student_performance_detail_table">各校区业绩详情对比表格</string>
    <string name="student_performance_table">各校区业绩对比表格</string>
    <string name="select_subordinates">选择下属</string>
    <string name="select_subordinates_menu_default">杭州校区</string>
    <string name="select_subordinates_searchview">搜索名字或电话号码</string>
    <string name="other_statistic">其他类别统计</string>
    <string name="cake_chart">饼图</string>
    <string name="bar_chart">柱状图</string>
    <string name="type_apply">报名量</string>
    <string name="type_refuse_point">目前困惑点</string>
    <string name="type_source">来源方式</string>
    <string name="chart_name">%s统计</string>
    <string name="chart_name_1">%s统计(登记人数)</string>
    <string name="item_start_school_year">入学年份</string>
    <string name="buiding">正在建设中...</string>
</resources>