<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_state"
        style="@style/communication_textview"
        android:hint="@string/commun_state_hnit"
        app:label_text_left="@string/commun_label_state"
        app:draw_bottom_line="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/commun_date_label"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textColor="@color/txt_2"
            android:gravity="center"
            android:background="@color/white"
            android:textSize="@dimen/sp14"
            android:text="@string/commun_date"/>

        <com.commonlib.widget.LabelTextView
            android:id="@+id/commun_date_start"
            android:layout_toRightOf="@+id/commun_date_label"
            style="@style/communication_textview"
            android:hint="@string/commun_date_start"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            app:draw_bottom_line="true"
            />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/commun_date_end"
            android:layout_toRightOf="@+id/commun_date_label"
            android:layout_below="@+id/commun_date_start"
            style="@style/communication_textview"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:hint="@string/commun_date_end"
            app:draw_bottom_line="true"
            />
    </RelativeLayout>
    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_refuse"
        style="@style/communication_textview"
        android:hint="@string/commun_refuse_hnit"
        app:label_text_left="@string/commun_refuse"
        app:draw_bottom_line="true"
        />

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_confidence"
        style="@style/communication_textview"
        app:label_text_left="@string/commun_confidence"
        android:hint="@string/commun_confidence_hnit"
        app:draw_bottom_line="true"
        />

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_order"
        style="@style/communication_textview"
        app:label_text_left="@string/commun_order"
        android:hint="@string/commun_order_hnit"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/comm_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/commu_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/commun_rest"
            android:gravity="center"
            android:background="@color/white"
            android:textSize="@dimen/sp14"
            android:textColor="@color/txt_6"/>

        <TextView
            android:id="@+id/commu_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/commun_ok"
            android:gravity="center"
            android:background="#fda428"
            android:textSize="@dimen/sp14"
            android:textColor="@color/white"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:alpha="0.5">
    </TextView>
</LinearLayout>