<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_state"
        style="@style/student_info_textview"
        android:hint="@string/commun_choose_hint"
        android:textColorHint="@color/txt_9"
        app:label_text_left="@string/commun_label_state" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/comm_line" />

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_faith"
        style="@style/student_info_textview"
        android:hint="@string/commun_choose_hint"
        android:textColorHint="@color/txt_9"
        app:label_text_left="@string/commun_label_faith" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/comm_line" />

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_oppose"
        style="@style/student_info_textview"
        android:hint="@string/commun_choose_hint"
        android:textColorHint="@color/txt_9"
        app:label_text_left="@string/commun_label_oppose" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/comm_line" />

    <com.commonlib.widget.LabelEditText
        android:id="@+id/commun_source"
        style="@style/student_info_textview"
        android:hint="@string/commun_input_source_hint"
        android:textColorHint="@color/txt_9"
        app:label_text="@string/commun_label_source"
        app:label_text_size="@dimen/sp14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/comm_line" />

    <com.commonlib.widget.LabelTextView
        android:id="@+id/commun_back_date"
        style="@style/student_info_textview"
        android:hint="@string/commun_choose1_hint"
        android:textColorHint="@color/txt_9"
        app:label_text_left="@string/commun_label_back_date" />
</LinearLayout>