<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_user_name"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_info_user_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_english_name"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_info_english_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_phone"
            style="@style/student_info_textview"
            android:drawableRight="@null"
            android:paddingRight="28dp"
            app:label_text_left="@string/label_student_phone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_qq"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_qq" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_wechat"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_wechat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_birthday"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_birthday" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_school"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_school" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_specialty"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_specialty" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_class"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_class" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/comm_line" />

        <com.commonlib.widget.LabelTextView
            android:id="@+id/student_idcard"
            style="@style/student_info_textview"
            app:label_text_left="@string/label_student_idcard" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>