<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar"></include>

    <EditText
        android:id="@+id/new_pwd"
        style="@style/edit_white_bg"
        android:layout_marginTop="20dp"
        android:hint="@string/new_pwd_hnit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e1e1e1" />


    <EditText
        android:id="@+id/new_pwd_again"
        style="@style/edit_white_bg"
        android:hint="@string/new_pwd_hnit_again"
         />

    <TextView
        android:id="@+id/submit_tv"
        style="@style/btn_green_cor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/submit" />
</LinearLayout>